--- a/docker/Dockerfile.pypy-slim
+++ b/docker/Dockerfile.pypy-slim
@@ -68,6 +68,13 @@ RUN pip install --no-cache-dir /tmp/autobahn-latest-py2.py3-none-any.whl[asyncio
 RUN pip install --no-cache-dir /tmp/crossbar-latest-py2.py3-none-any.whl
 
 RUN if [ "$CROSSBAR_ARCH" = "amd64" ]; then pip install --no-cache-dir "vmprof>=0.4.12"; fi
+RUN python -c '\
+import sys\
+try:\
+   import wsaccel\
+except ImportError:\
+   sys.exit(0)\
+sys.exit(1)'
 
 # test if everything installed properly
 RUN crossbar version
