--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -3,8 +3,8 @@ autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.2.1
 base58>=2.1.0
 bcrypt>=3.1.6
 bitstring>=3.1.5
-cbor>=1.0.0
-cfxdb>=21.2.1
+cbor2>=5.2.0
+cfxdb>=22.2.2
 click>=7.0
 colorama>=0.4.4
 constantly>=15.1.0
@@ -63,7 +63,7 @@ treq>=20.4.1
 twisted[tls,conch,http2,osx_platform]>=21.7.0; sys_platform == 'darwin'
 twisted[tls,conch,http2,windows_platform]>=21.7.0; sys_platform == 'win32'
 twisted[tls,conch,http2]>=21.7.0; sys_platform != 'darwin' and sys_platform != 'win32'
-txaio>=21.2.1
+txaio>=22.2.1
 txtorcon>=20.0.0
 u-msgpack-python>=2.4.1
 ujson>=5.1.0
@@ -76,5 +76,5 @@ web3>=5.13.1
 werkzeug>=0.14.1
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
 xbr>=21.2.1
-zlmdb>=22.1.2
+zlmdb>=22.2.1
 zope.interface>=4.4.2
