--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
     #     sudo apt install libsnappy-dev
     #     sudo apt install libunwind-dev
 
-    - name: Set up Python 3.x
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.9'
         architecture: 'x64'
 
     - name: Install Python package dependencies
@@ -70,10 +70,10 @@ jobs:
     #     sudo apt install libsnappy-dev
     #     sudo apt install libunwind-dev
 
-    - name: Set up Python 3.x
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.9'
         architecture: 'x64'
 
     - name: Install Python package dependencies
