--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -72,7 +72,8 @@ validate-email>=1.3
 vmprof>=0.4.15
 watchdog>=0.8.3
 web3>=5.13.1
-werkzeug>=0.14.1
+# ImportError: cannot import name 'escape' from 'werkzeug.utils'
+werkzeug>=0.14.1,<2
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
 xbr>=21.2.1
 git+https://github.com/crossbario/zlmdb.git@master#egg=zlmdb
