--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -74,7 +74,8 @@ validate-email>=1.3
 git+https://github.com/vmprof/vmprof-python.git#egg=vmprof
 watchdog>=0.8.3
 web3>=5.13.1
-werkzeug>=0.14.1
+# ImportError: cannot import name 'escape' from 'werkzeug.utils'
+werkzeug>=0.14.1,<2
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
 xbr>=21.2.1
 zlmdb>=22.3.1
